[package]
name = "edge-ftp"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"
description = "Async + `no_std` + no-alloc implementation of the FTP protocol"
readme = "README.md"
license = "MIT OR Apache-2.0"
categories = [
    "embedded",
    "no-std::no-alloc",
    "asynchronous",
    "network-programming",
    "web-programming::ftp"
]

[features]
default = ["io"]
std = ["io"]
io = ["edge-nal"]
defmt = ["dep:defmt", "embedded-svc?/defmt"]

[dependencies]
log = { version = "0.4", default-features = false, optional = true }
defmt = { version = "0.3", optional = true }
embedded-svc = { workspace = true, optional = true, default-features = false }
edge-nal = { workspace = true, optional = true }
